# T3-programacion-funcional

./: 20240913164939C39DC679072132__base.hs  README.md  T3.cabal
app/: Main.hs  T3.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
