cabal-version:      3.0
name:               T3
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             valfranciscangeli
maintainer:         val.franciscangeli@gmail.com
category:           Homework
build-type:         Simple
extra-doc-files:    README.md
common warnings
    ghc-options: -Wall
executable T3
    import:           warnings
    main-is:          Main.hs
    other-modules: T3.hs
    build-depends:  base ^>=4.17.2.1,
                    hspec >= 2.11.9,
                    QuickCheck >=2.15.0.1,
                    template-haskell >=2.19.0.0,
                    mtl >= 2.2.2,
                    probability >= 0.2
    hs-source-dirs:   app
    default-language: Haskell2010
